feat: complete LuxeStay booking and admin workflows